  dernière période en limitant l'extraction du début de la période jusqu'à la 
  date du conseil de classe déclaré en scolarité dans Verrouillage des classes.
- Absences du jour : Possibilité de paramétrer l'affichage de toutes les saisies
  par défaut plutôt que seulement les manquements à l'obligation de présence par défaut.

Cahiers de textes:
- Possibilité d'ouvrir les CDT à l'usage exclusif des professeurs 
  (pour proposer un CDT personnel aux professeurs, indépendamment d'un autre CDT
   éventuellement rempli par les professeurs sur un ENT pour les élèves,...).

LSUN:
- Possibilité de n'extraire qu'une ou certaines périodes.

Genèse des classes:
- Possibilité d'utiliser un autre type de profil élève mêlant comportement et niveau scolaire.

Général:
- Possibilité de saisir les modalités d'accompagnement en compte scolarité
  (conditionné par un droit à donner dans Gestion générale/Droits d'accès).
- Possibilité de saisir/corriger les numéros de téléphone et mail en compte cpe et scolarité.
  (conditionné pour les CPE par un droit à donner dans Gestion générale/Droits d'accès).
- Possibilité d'afficher un message invitant les visiteurs à accepter les cookies du Gepi
  (paramétrable en administrateur dans Gestion générale/Options de connexion).
- Possibilité de trier la liste des sauvegardes par taille, par date.

Bibliothèques:
- Mise à jour de HTMLPurifier en version 4.9.3


Gepi-1.7.1 (30/03/2017)
===========================

Absences 2:
- Possibilité de donner des droits de consultation/modification de certains 
  paramètres ABS2 à des non-administrateurs (typiquement tel CPE).
- Possibilité de ne pas afficher les saisies correspondant aux Marques d'appel.
- Possibilité de ne pas enregistrer un marqueur d'appel lorsque plusieurs saisies 
  sont faites sur le même créneau/groupe,...
- Bilan individuel: Possibilité de ne pas afficher/exporter les saisies englobées.

Bulletins:
- Ajout d'un témoin sur le cycle et le niveau de chaque élève pour repérer un 